--- a/application/home/view/themes/bootstrap/groups.html
+++ b/application/home/view/themes/bootstrap/groups.html
@@ -4,28 +4,20 @@
 <div class="container">
     <form class="form-horizontal" action="/groups" method="get">
         <div class="form-inline">
-            <label class="radio-inline">
-                <input type="radio" name="filter" id="allgroup" onclick="goto_all_group();" value="" {if
-                       $filter==""}checked{/if}> {$lang.allgroup}
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="filter" id="mycreated" onclick="goto_my_created();" value="1" {if
-                       $filter=="1"}checked{/if}> {$lang.my_creation}
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="filter" id="myjoined" onclick="goto_my_joined();" value="2" {if
-                       $filter=="2"}checked{/if}> {$lang.my_join}
-            </label>
-
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
             <input class="form-control" style="border-radius: 0px" type="text" id="keyword" name="keyword"
                    value="{$keyword}" placeholder="{$lang.search}: {$lang.name}">
             <button class="btn btn-success"><span class="glyphicon glyphicon-search"></span> {$lang.search}</button>
         </div>
     </form>
+    <br>
 
-    <hr>
+    <ul class="nav nav-tabs">
+        <li class="{if $filter==''}active{/if}"><a href="/groups?filter=&keyword={$keyword}">{$lang.allgroup}</a></li>
+        <li class="{if $filter=='1'}active{/if}"><a href="/groups?filter=1&keyword={$keyword}">{$lang.my_creation}</a></li>
+        <li class="{if $filter=='2'}active{/if}"><a href="/groups?filter=2&keyword={$keyword}">{$lang.my_join}</a></li>
+    </ul>
+
+    <br>
 
     {if $filter==1}
     <a class="btn btn-success" href="javascript:" onclick="createGroup();"><span class="glyphicon glyphicon-plus"></span> <?php echo ['en' =>
