refactor: 重构group模块的模版文件存放至group模块下面

--- a/application/group/view/group-notifications.html
+++ b/application/group/view/group-notifications.html
@@ -1,4 +1,4 @@
-{extend name="home@themes/bootstrap/layout-group/group-layout" /}
+{extend name="common/group-layout" /}
 {block name='title_block'}{$lang.notifications} - {$group->name}{/block}
 {block name='body'}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.9.2/ckeditor.js"></script>
