--- a/application/group/view/group-members.html
+++ b/application/group/view/group-members.html
@@ -1,4 +1,4 @@
-{extend name="home@themes/bootstrap/layout-group/group-layout" /}
+{extend name="common/group-layout" /}
 {block name='title_block'}{$lang.members} - {$group->name}{/block}
 {block name='body'}
 <?php $status_arr = array('未处理','已通过','已踢出'); ?>
