--- a/application/group/view/group-tasks.html
+++ b/application/group/view/group-tasks.html
@@ -1,4 +1,4 @@
-{extend name="home@themes/bootstrap/layout-group/group-layout" /}
+{extend name="common/group-layout" /}
 {block name='title_block'}{$lang.tasks} - {$group->name}{/block}
 {block name='body'}
 <script src="/static/laydate/laydate.js"></script>
