--- a/application/group/view/group.html
+++ b/application/group/view/group.html
@@ -1,4 +1,4 @@
-{extend name="home@themes/bootstrap/layout-group/group-layout" /}
+{extend name="common/group-layout" /}
 {block name='title_block'}{$group->name}{/block}
 {block name='body'}
 <div class="container">
