refactor: 重构contest模块的模版文件存放至contest模块下面

--- a/application/contest/view/contest-problems.html
+++ b/application/contest/view/contest-problems.html
@@ -1,4 +1,4 @@
-{extend name="home@themes/bootstrap/layout-contest/contest-layout" /}
+{extend name="common/contest-layout" /}
 {block name='title_block'}{$contest->title} - 江西理工大学在线测评系统{/block}
 {block name='body'}
 <div class="container">
