--- a/application/contest/view/contest-status.html
+++ b/application/contest/view/contest-status.html
@@ -1,4 +1,4 @@
-{extend name="home@themes/bootstrap/layout-contest/contest-layout" /}
+{extend name="common/contest-layout" /}
 {block name='title_block'}{$lang['status']} - {$lang['justoj']}{/block}
 {block name='body'}
 <div class="container">
