--- a/application/contest/view/contest-rank.html
+++ b/application/contest/view/contest-rank.html
@@ -1,4 +1,4 @@
-{extend name="home@themes/bootstrap/layout-contest/contest-layout" /}
+{extend name="common/contest-layout" /}
 {block name='title_block'}{$lang['rank']} - {$lang['justoj']}{/block}
 {block name='body'}
 <style media="screen">
