--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -113,7 +113,7 @@
                 </tr>
                 <tr>
                     <th>开发者</th>
-                    <td>ismdeep(ismdeep@qq.com) 江木</td></tr>
+                    <td>ismdeep( <a href="mailto:{$admin_email}">{$admin_email}</a> ) 江木</td></tr>
                 </tbody>
             </table>
         </div>
