--- a/application/home/view/themes/bootstrap/edit-my-profile.html
+++ b/application/home/view/themes/bootstrap/edit-my-profile.html
@@ -31,21 +31,21 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.school}</label>
+                    <label class="col-sm-4 control-label"><span style="color: red">*</span> {$lang.school}</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" name="school" value="{$user->school}">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.academy}</label>
+                    <label class="col-sm-4 control-label"><span style="color: red">*</span> {$lang.academy}</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" name="academy" value="{$user->academy}">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-4 control-label">{$lang.class}</label>
+                    <label class="col-sm-4 control-label"><span style="color: red">*</span> {$lang.class}</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" name="class" value="{$user->class}">
                         <span>{$lang.eg}: 计算机182班</span>
