feat: 邮箱验证功能

--- a/application/home/view/themes/bootstrap/layout/common.html
+++ b/application/home/view/themes/bootstrap/layout/common.html
@@ -94,7 +94,12 @@
 				{if $is_administrator}
 				<li><a class="" href="/admin"><span class="glyphicon glyphicon-cog"></span> {$lang.admin_system}</a></li>
 				{/if}
-				<li><a class="" href="/profile"><span class="glyphicon glyphicon-user"></span> {$login_user->user_id}</a></li>
+				<li><a class="" href="/profile"><span class="glyphicon glyphicon-user"></span>
+					{$login_user->user_id}
+					{if $login_user->email_verified != 1}
+					<span class="badge">1</span>
+					{/if}
+				</a></li>
 				<li><a class="" onclick="logout();" href="/logout?redirect=<?php echo urlencode($_SERVER['REQUEST_URI']);?>"><span class="glyphicon glyphicon-log-out"></span> {$lang.logout}</a></li>
 				{else}
 				<li><a class="" href="/register"><span class="glyphicon glyphicon-user"></span> {$lang.register}</a></li>
