--- a/application/home/view/themes/bootstrap/profile.html
+++ b/application/home/view/themes/bootstrap/profile.html
@@ -54,6 +54,15 @@
 					<label class="col-sm-4 control-label">Email</label>
 					<div class="col-sm-8">
 						<input type="text" class="form-control" name="email" value="{$user->email}" disabled readonly>
+						{if $user->email_verified == 1}
+						<p>
+							<span>已验证</span> <a href="/profile/email/change">Change Email</a>
+						</p>
+						{else}
+						<p style="color: red">
+							邮箱未验证！请<a href="/profile/email/verify">前往验证</a>。或者 <a href="/profile/email/change">Change Email</a>
+						</p>
+						{/if}
 					</div>
 				</div>
 
