邮箱验证功能

--- a/application/home/view/themes/bootstrap/profile.html
+++ b/application/home/view/themes/bootstrap/profile.html
@@ -59,7 +59,7 @@
 							<span>已验证</span> <a href="/profile/email/change">Change Email</a>
 						</p>
 						{else}
-						<p>
+						<p style="color: red">
 							邮箱未验证！请<a href="/profile/email/verify">前往验证</a>。或者 <a href="/profile/email/change">Change Email</a>
 						</p>
 						{/if}
